--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,14 @@
 :root {
-  --azul-escuro: #060417;
+  --dark-blue: #060417;
+  --main-color: #a993fe;
+  --main-color-variant: #7e61e7;
 }
 /* Importar fonte "SF Pro */
 @import url("https://fonts.googleapis.com/css2?family=San+Francisco&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap");
 * {
   padding: 0;
   margin: 0;
-  font-family: San Francisco, Arial, sans-serif;
 }
 
 /* Estilização cabeçalho*/
@@ -18,7 +20,8 @@
   z-index: 30;
 }
 #nome {
-  color: #a993fe;
+  font-family: "Titillium Web", monospace;
+  color: var(--main-color);
   display: flex;
   align-items: center;
   text-align: center;
@@ -59,7 +62,11 @@ span {
   content: " ";
   width: 2rem;
   height: 0.2rem;
-  background: linear-gradient(90deg, #a993fe 0%, #7e61e7 100%);
+  background: linear-gradient(
+    90deg,
+    var(--main-color) 0%,
+    var(--main-color-variant) 100%
+  );
   border-radius: 0.5rem;
   position: absolute;
   bottom: -0.6rem;
@@ -79,7 +86,11 @@ span {
   align-items: center;
   justify-content: center;
   color: #fff;
-  background: linear-gradient(90deg, #a993fe 0%, #7e61e7 100%);
+  background: linear-gradient(
+    90deg,
+    var(--main-color) 0%,
+    var(--main-color-variant) 100%
+  );
   padding: 0.6rem 2rem;
   border: none;
   outline: 1.5px solid transparent;
@@ -89,13 +100,128 @@ span {
 }
 
 #btn-contato:hover {
-  color: #a993fe;
+  color: var(--main-color);
   background: #000;
-  outline: 1.5px solid #a993fe;
+  outline: 1.5px solid var(--main-color);
+}
+
+#menu-btn {
+  width: 2.5rem;
+  height: 2.5rem;
+  font-size: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  border-radius: 0.4rem;
+  color: #fff;
+  background: linear-gradient(
+    90deg,
+    var(--main-color) -0.13%,
+    var(--main-color-variant) 99.87%
+  );
+  line-height: 0;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  display: none;
+}
+
+#menu-btn:hover {
+  color: var(--main-color);
+  background-color: #000;
+  border: 1px solid var(--main-color);
+}
+
+/* cabeçalho responsividade DEsktop */
+@media (max-width: 425px) {
+  #nome {
+    font-size: 10rem;
+  }
+}
+@media (max-width: 769px) {
+  #menu-btn {
+    display: block;
+  }
+  #navbar.mobile-menu ul {
+    display: block;
+  }
+
+  #navbar ul {
+    display: none;
+  }
+}
+@media (max-width: 1325px) {
+  #navbar {
+    padding: 0 2rem;
+  }
+}
+
+/* Mobile navbar */
+.mobile-menu {
+  width: 100%;
+  height: 100vh;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  transition: transform 0.3s ease;
+  transform: translateX(-100%);
+}
+
+.mobile-menu-container {
+  width: 80%;
+  height: 100%;
+  background-color: #342864;
+  padding: 2rem;
+  box-sizing: border-box;
+}
+
+.mobile-menu.active {
+  display: block;
+  transform: translateX(0);
+}
+
+.mobile-menu ul {
+  list-style: none;
+  padding: 20px;
+  text-align: center;
+}
+.mobile-menu #btn-contato {
+  list-style: none;
+  padding: 20px;
+  text-align: center;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.mobile-menu li {
+  margin-bottom: 1rem;
+}
+
+.mobile-menu a {
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #fff;
+  transition: color 0.3s ease;
+  font-size: 1.5rem;
+}
+
+.mobile-menu a:hover {
+  color: var(--main-color);
+}
+
+@media (max-width: 769px) {
+  .mobile-menu {
+    display: none;
+  }
 }
 
 /* Estilização Body */
 body {
+  font-family: "Titillium Web", monospace;
   background-color: #060417;
   color: white;
   display: block;
