--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
   top: 0;
   z-index: 30;
 }
+/* Titulo, logo */
 #nome {
   font-family: "Permanent Marker", cursive;
   font-weight: 400;
@@ -63,6 +64,7 @@ span {
   cursor: pointer;
 }
 
+/* Efeito a baixo do texto do menu */
 #navbar a::before {
   content: " ";
   width: 2rem;
