--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   --dark-blue: #060417;
   --main-color: #a993fe;
   --main-color-variant: #7e61e7;
+  --white: #fff;
 }
 /* Importar fontes "SF Pro" & "Titillium" */
 @import url("https://fonts.googleapis.com/css2?family=San+Francisco&display=swap");
@@ -26,7 +27,7 @@
   font-family: "Permanent Marker", cursive;
   font-weight: 400;
   font-style: normal;
-  color: var(--main-color);
+  color: var(--white);
   display: flex;
   justify-content: center;
   align-items: center;
