Atualizações de #nome, começo da section principal de apresentação

--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@ span {
 }
 @media (max-width: 1325px) {
   #navbar {
-    padding: 0 2rem;
+    padding: 0 2rem 0 0rem;
   }
 }
 @media (max-width: 769px) {
@@ -331,4 +331,18 @@ body {
   margin: 0 auto;
   max-width: 1100px;
   width: 80%;
+}
+
+#container {
+  max-width: 1100px !important;
+  margin: 0 auto;
+  position: relative;
+}
+#main-container {
+  padding-top: 20px;
+}
+@media (max-width: 1100px) {
+  #container {
+    padding: 0;
+  }
 }
