--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,11 @@
 /* Estilização cabeçalho*/
 #header {
   width: 100%;
-  background: rgba(0, 0, 0, 0.8);
+  background: linear-gradient(
+    90deg,
+    rgba(6, 4, 23, 0.9),
+    rgba(13, 15, 41, 0.9)
+  );
   padding: 0.5rem 0;
   position: sticky;
   top: 0;
