--- a/css/style.css
+++ b/css/style.css
@@ -325,6 +325,13 @@ span {
     display: column;
     font-size: 5rem;
   }
+  #imgs-main {
+    flex-direction: column;
+  }
+  .img-main {
+    width: 80%;
+    margin: 10px 0;
+  }
 }
 @media (max-width: 769px) {
   #menu-btn {
@@ -413,13 +420,30 @@ body {
 }
 /* Sections  */
 #section-sobre {
+  font-size: 1.2rem;
+  color: #ccc;
 }
+#imgs-main {
+  display: flex;
+  justify-content: center; /* Centralizar horizontalmente */
+  align-items: center; /* Centralizar verticalmente */
+  margin: 20px auto; /* Adicione margem superior e inferior (opcional) */
+}
+
 .img-main {
   width: 100px;
-  position: static;
+  margin: 0 10px; /* Espaçamento entre as imagens (opcional) */
+}
+.img-main:hover {
+  background-color: red;
 }
 #section-projetos {
+  font-size: 1.2rem;
+  color: #ccc;
 }
 .sec-title {
+  margin-bottom: 20px;
+}
+.sec-paragraph {
   margin-bottom: 20px;
 }
