--- a/css/style.css
+++ b/css/style.css
@@ -329,7 +329,7 @@ span {
     flex-direction: column;
   }
   .img-main {
-    width: 80%;
+    width: calc(50% + 20px);
     margin: 10px 0;
   }
 }
@@ -425,17 +425,17 @@ body {
 }
 #imgs-main {
   display: flex;
-  justify-content: center; /* Centralizar horizontalmente */
-  align-items: center; /* Centralizar verticalmente */
-  margin: 20px auto; /* Adicione margem superior e inferior (opcional) */
+  justify-content: center;
+  align-items: center;
+  margin: 20px auto;
+  flex-wrap: wrap;
 }
-
 .img-main {
   width: 100px;
-  margin: 0 10px; /* Espaçamento entre as imagens (opcional) */
+  margin: 10px;
 }
 .img-main:hover {
-  background-color: red;
+  zoom: 1.5;
 }
 #section-projetos {
   font-size: 1.2rem;
