--- a/css/style.css
+++ b/css/style.css
@@ -373,7 +373,6 @@ span {
 /* Estilização Body */
 body {
   font-family: "Titillium Web", monospace;
-  /* background-color: #060417; */
   background: linear-gradient(
     to bottom,
     #060417 0.5%,
@@ -433,9 +432,16 @@ body {
 .img-main {
   width: 100px;
   margin: 10px;
+  border-radius: 20%;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  transition: transform 0.5s ease;
 }
 .img-main:hover {
-  zoom: 1.5;
+  transform: scale(1.2);
 }
 #section-projetos {
   font-size: 1.2rem;
