--- a/css/style.css
+++ b/css/style.css
@@ -438,11 +438,14 @@ body {
   font-size: 1.2rem;
   color: #ccc;
 }
+.sec-paragraph {
+  margin-bottom: 5rem;
+}
 #imgs-main {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20px auto;
+  margin: 5rem;
   flex-wrap: wrap;
 }
 .img-main {
