--- a/css/style.css
+++ b/css/style.css
@@ -529,3 +529,24 @@ body {
     margin-bottom: 20px;
   }
 }
+
+footer {
+  background-color: var(--dark-blue);
+  padding: 2.66em 0;
+  text-align: center;
+}
+footer h2 {
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+}
+footer h2 a {
+  text-decoration: none;
+  color: white;
+}
+footer p {
+  padding-top: 1rem;
+  padding-bottom: 1.5rem;
+}
+.social-icon {
+  color: white;
+}
