adicionando scroll-hehavior para o navbar ir com efeito

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
 @import url("https://fonts.googleapis.com/css2?family=San+Francisco&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap");
 /* Reset de Paddings e Margens */
+html {
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+}
 * {
   padding: 0;
   margin: 0;
@@ -531,7 +535,7 @@ body {
 }
 
 footer {
-  background-color: var(--dark-blue);
+  background-color: rgba(0, 0, 23, 0.56);
   padding: 2.66em 0;
   text-align: center;
 }
